Documentation for route with path param
